[package]
name = "scratchstack-service-iam"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
description = "An implementation of the AWS Identity and Access Management Service"
homepage = "https://github.com/dacut/scratchstack"
repository = "https://github.com/dacut/scratchstack"
license = "MIT"
readme = "../README.md"

[dependencies]
env_logger = "^0.9"
futures = "^0.3"
getopts = "^0.2"
http = "^0.2"
http-body = "^0.4"
hyper = { version = "~0.14.20", features = [ "http1", "http2", "runtime", "server", "tcp" ] }
log = "^0.4"
rustls = "^0.20"
scratchstack-aws-signature = "^0.11.1-preview.2"
tokio-rustls = "^0.23"
tower = "^0.4"

[dependencies.chrono]
version = "^0.4"
default-features = false
features = [ "std" ]

[dependencies.scratchstack-config]
git = "https://github.com/dacut/scratchstack-config"
branch = "main"

[dependencies.scratchstack-http-framework]
git = "https://github.com/dacut/scratchstack-http-framework"
branch = "main"
# path = "../../scratchstack-http-framework"
# version = "0.1.0"
features = [ "gsk_direct" ]

[dependencies.serde]
version = "^1.0"
features = [ "derive" ]

[dependencies.sqlx]
# Forking 0.6.2 to fix a libsqlite3 vulnerability until 0.7 is released
git = "https://github.com/dacut/sqlx.git"
branch = "0.6.2-sqlite-fix"
features = ["all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "^1.19"
features = [ "rt-multi-thread", "net" ]

[dev-dependencies]
pretty_assertions = "^1.3"
test-log = "^0.2"
