[package]
name = "scratchstack-iam"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
chrono = "^0.4"
diesel = { version = "^1.4", features = ["chrono", "postgres", "r2d2"] }
env_logger = "^0.9"
futures = "^0.3"
getopts = "^0.2"
http = "^0.2"
http-body = "^0.4"
humantime = "^2.1"
humantime-serde = "^1.1"
hyper = { version = "^0.14", features = [ "http1", "http2", "runtime", "server", "tcp" ] }
log = "^0.4"
postgres = "^0.19"
rustls = "^0.20"
scratchstack-aws-signature = "^0.10"
scratchstack-aws-signature-hyper = "^0.10"
scratchstack-schema = { version = "^0.1", path = "../../lib/scratchstack-schema" }
scratchstack-get-signing-key-direct = { version = "^0.1", path = "../../lib/scratchstack-get-signing-key-direct" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.19", features = ["full"] }
tokio-rustls = "^0.23"
tower = "^0.4"
