[package]
name = "scratchstack-iam"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
env_logger = "^0.9"
futures = "^0.3"
getopts = "^0.2"
http = "^0.2"
http-body = "^0.4"
hyper = { version = "~0.14.19", features = [ "http1", "http2", "runtime", "server", "tcp" ] }
log = "^0.4"
rustls = "^0.20"
scratchstack-aws-signature = { git = "https://github.com/dacut/scratchstack-aws-signature", branch = "main" }
scratchstack-aws-signature-hyper = { git = "https://github.com/dacut/scratchstack-aws-signature", branch = "main" }
scratchstack-config = { version = "^0.1", path = "../../lib/scratchstack-config" }
scratchstack-schema = { version = "^0.1", path = "../../lib/scratchstack-schema" }
scratchstack-get-signing-key-direct = { version = "^0.1", path = "../../lib/scratchstack-get-signing-key-direct" }
serde = { version = "^1.0", features = ["derive"] }
sqlx = { version = "^0.6", features = ["all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls"]}
tokio = { version = "^1.19", features = ["full"] }
tokio-rustls = "^0.23"
tower = "^0.4"
