[package]
name = "scratchstack-get-signing-key-direct"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"
description = "Return signing keys directly from the database"
homepage = "https://github.com/dacut/scratchstack"
repository = "https://github.com/dacut/scratchstack"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scratchstack-aws-principal = { version = "^0.3" }
scratchstack-aws-signature = { version = "^0.10" }
diesel = { version = "^1.4", features = [ "chrono" ] }
postgres = "^0.19"
scratchstack-schema = { version = "^0.1", path = "../scratchstack-schema" }
tower = { version = "^0.4" }

[dev-dependencies]
diesel = { version = "^1.4", features = [ "chrono", "sqlite" ] }
