[package]
name = "scratchstack-schema"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
description = "The Scratchstack database schema"
homepage = "https://github.com/dacut/scratchstack"
repository = "https://github.com/dacut/scratchstack"
license = "MIT"
readme = "../../README.md"

[dependencies]
chrono = "^0.4"
