[package]
name = "scratchstack_aspen"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scratchstack_aspen"
path = "lib.rs"

[dependencies]
log = { version = "^0.4" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
env_logger = "^0.8"
test-env-log = "^0.2"