[package]
name = "scratchstack-iam"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.10"
diesel = { version = "^1.4", features = ["postgres", "r2d2"] }
env_logger = "^0.8"
futures = "^0.3.5"
getopts = "^0.2"
humantime = "^2.0"
humantime-serde = "^1.0"
http = "^0.2"
hyper = { version = "^0.14", features = [ "http1", "http2", "runtime", "server", "tcp" ]}
log = "^0.4"
postgres = "^0.19"
rustls = "^0.19"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.3", features = ["full"] }
tokio-rustls = "^0.22"
