[package]
name = "scratchstack-limitstore"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
description = "An implementation of limit stores for internal ScratchStack services."
homepage = "https://github.com/dacut/scratchstack"
repository = "https://github.com/dacut/scratchstack"
license = "MIT"
readme = "../README.md"

[dependencies]
base64 = "^0.10"
futures = "^0.1"
getopts = "^0.2"
hyper = "^0.14"
http = "^0.1"
humantime = "^2.0"
native-tls = "^0.2"
postgres = "^0.17"
postgres-native-tls = "^0.3"
rustls = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio-postgres = "^0.5"